--- a/app/src/main/res/layout/activity_feed_relatos.xml
+++ b/app/src/main/res/layout/activity_feed_relatos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
 
     tools:context="relato.app.dems.com.relato.FeedRelatos">
@@ -58,7 +59,7 @@
 
                 <FrameLayout
                     android:background="@color/black"
-                    android:alpha="0.5"
+                    android:alpha="0.4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     />
@@ -80,6 +81,51 @@
 
         </android.support.design.widget.AppBarLayout>
 
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu_yellow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
+        fab:menu_labels_style="@style/MenuLabelsStyle"
+        fab:menu_labels_showAnimation="@anim/jump_from_down"
+        fab:menu_labels_hideAnimation="@anim/jump_to_down"
+        fab:menu_animationDelayPerItem="0"
+        fab:menu_shadowColor="#444"
+        fab:menu_colorNormal="@color/colorAccent"
+        fab:menu_colorPressed="@color/colorAccentPress"
+        fab:menu_colorRipple="@color/colorAccent"
+        fab:menu_labels_ellipsize="end"
+
+
+        fab:menu_labels_singleLine="true">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/faba"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_share"
+            android:onClick="share"
+            fab:fab_label="Compartir"
+            style="@style/MenuButtonsStyle" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_star_half"
+            android:onClick="score"
+            fab:fab_label="Calificar"
+            style="@style/MenuButtonsStyle" />
+
+
+    </com.github.clans.fab.FloatingActionMenu>
 
 
 </android.support.design.widget.CoordinatorLayout>
