--- a/app/src/main/res/layout/activity_front_details.xml
+++ b/app/src/main/res/layout/activity_front_details.xml
@@ -179,6 +179,7 @@
             fab:fab_label="Calificar"
             style="@style/MenuButtonsStyle" />
 
+
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab2"
             android:layout_width="wrap_content"
@@ -192,9 +193,18 @@
     </com.github.clans.fab.FloatingActionMenu>
 
 
+    <!-- FAB -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="@dimen/size_fab"
+        android:layout_height="@dimen/size_fab"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_voice"
+        app:borderWidth="0dp"
+        android:onClick="validarAudio"
 
-
-
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|right|end" />
 
 
 
