--- a/app/src/main/res/layout/activity_blog_single_acticity.xml
+++ b/app/src/main/res/layout/activity_blog_single_acticity.xml
@@ -158,6 +158,7 @@
         android:layout_marginTop="0dp"
         android:paddingBottom="10dp"
         android:paddingRight="10dp"
+
         fab:menu_labels_style="@style/MenuLabelsStyle"
         fab:menu_labels_showAnimation="@anim/jump_from_down"
         fab:menu_labels_hideAnimation="@anim/jump_to_down"
@@ -200,5 +201,17 @@
     </com.github.clans.fab.FloatingActionMenu>
 
 
+
+    <!-- FAB -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="@dimen/size_fab"
+        android:layout_height="@dimen/size_fab"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_voice"
+        app:borderWidth="0dp"
+        android:onClick="validarAudio"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
