--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorAccentPress">#e11c5f</color>
     <color name="white">#FFf</color>
+    <color name="red">#FFFF404D</color>
 
 
     <color name="gray">#c2c2c2</color>
