--- a/app/src/main/res/layout/activity_blog_single_activity2.xml
+++ b/app/src/main/res/layout/activity_blog_single_activity2.xml
@@ -18,8 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         android:layout_gravity="bottom"
-        android:text="Add Post"/>
+        android:text="Eliminar Historia"/>
 
     <!-- Objeto con Scroll -->
     <android.support.v4.widget.NestedScrollView
