--- a/app/src/main/res/layout/app_bar_menu_customize_now.xml
+++ b/app/src/main/res/layout/app_bar_menu_customize_now.xml
@@ -16,7 +16,6 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:visibility="visible"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
@@ -24,6 +23,7 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_marginRight="10dp"
                 android:weightSum="1"
                 android:layout_height="wrap_content">
