--- a/app/src/main/res/layout/activity_access_relato_extra.xml
+++ b/app/src/main/res/layout/activity_access_relato_extra.xml
@@ -76,6 +76,7 @@
                 android:text="No tienes una cuenta,"/>
 
             <TextView
+                android:id="@+id/acceso_create_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -96,16 +97,14 @@
                 android:layout_marginTop="10dp"
                 android:text="¿Olvidate tu contraseña?,"/>
             <TextView
+                android:id="@+id/acceso_forget_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Click Aquí."
+                android:text=" Click Aquí."
                 android:textColor="#00a694"/>
 
-
         </LinearLayout>
-
-
 
 
     </LinearLayout>
@@ -146,6 +145,8 @@
                 android:paddingRight="20dp"
 
                 />
+
+
 
 
         </LinearLayout>
