--- a/app/src/main/res/layout/activity_forget_password_relato.xml
+++ b/app/src/main/res/layout/activity_forget_password_relato.xml
@@ -53,6 +53,7 @@
                 android:id="@+id/forget_user_email"
                 android:hint="Email"
                 android:text=""
+                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
