--- a/app/src/main/res/layout/activity_register_relato.xml
+++ b/app/src/main/res/layout/activity_register_relato.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/fondo_background"
+    android:background="@mipmap/backregisterone"
     android:id="@+id/registerRelato"
+
     tools:context="relato.app.dems.com.relato.beta.View.Acceso.RegisterRelato">
 
     <FrameLayout
@@ -15,7 +16,6 @@
         android:alpha="0.2">
 
     </FrameLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,8 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:layout_marginBottom="40dp"
-            android:text="Sangrienta\nLectura"
+            android:layout_marginBottom="60dp"
+            android:text="asd"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="70sp"
@@ -52,7 +52,7 @@
                 android:id="@+id/register_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:hint="Usuario"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -73,7 +73,7 @@
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.TextInputLayout>
@@ -93,7 +93,7 @@
                 android:textColor="@color/white"
                 android:inputType="textPassword"
                 android:textSize="16sp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.TextInputLayout>
@@ -101,6 +101,7 @@
 
         <FrameLayout
             android:id="@+id/RegistrarCuenta"
+            android:layout_marginTop="10dp"
             android:layout_width="280dp"
             android:layout_height="48dp"
             android:background="@drawable/sign_cuenta"
